<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AskMyFriends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">AskMyFriends</string>
    <string name="new_question">New survey</string>
    <string name="results">Results</string>
    <string name="list">List surveys</string>
    <string name="question">Question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="friend_1">Friend 1</string>
    <string name="friend_2">Friend 2</string>
    <string name="friend_3">Friend 3</string>
    <string name="send_question">Send Question</string>
    <string name="questionMark">\?</string>
    <string name="sample_text">Sample Text</string>
    <string name="photo_desc">Contact Photo</string>

</resources>
